# rpi_dht

./: README.md
html/: temp.html
src/: CMakeLists.txt  dht11.c
